# invenio-app-rdm

./: setup.cfg
invenio_app_rdm/: __init__.py  config.py  ext.py  oarepo_changes.py
invenio_app_rdm/records_ui/previewer/: previewable_zip.py
invenio_app_rdm/records_ui/templates/semantic-ui/invenio_app_rdm/records/: deposit.html
invenio_app_rdm/records_ui/views/: __init__.py  decorators.py  deposits.py  records.py
invenio_app_rdm/requests_ui/views/: requests.py
invenio_app_rdm/theme/: webpack.py
invenio_app_rdm/theme/assets/semantic-ui/js/invenio_app_rdm/deposit/: RDMDepositForm.js  files-rdm.js  files-uppy.js
invenio_app_rdm/theme/assets/semantic-ui/js/invenio_app_rdm/landing_page/: theme.js
invenio_app_rdm/theme/assets/semantic-ui/js/invenio_app_rdm/overridableRegistry/: mapping.js
invenio_app_rdm/theme/templates/semantic-ui/invenio_previewer/: previewable_zip.html
