# -*- coding: utf-8 -*-
#
# Copyright (C) 2019-2024 CERN.
# Copyright (C) 2019-2022 Northwestern University.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio App RDM is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-app-rdm
version = attr: invenio_app_rdm.__version__
description = Invenio Research Data Management.
long_description = file: README.rst, CHANGES.rst
keywords = invenio-app-rdm Invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-app-rdm
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
# removed-by-oarepo install_requires =
# removed-by-oarepo     # Invenio core modules
# removed-by-oarepo     invenio-app>=1.4.0,<2.0.0
# removed-by-oarepo     invenio-base>=1.3.0,<2.0.0
# removed-by-oarepo     invenio-cache>=1.3.0,<2.0.0
# removed-by-oarepo     invenio-celery>=1.2.4,<2.0.0
# removed-by-oarepo     invenio-config>=1.0.3,<2.0.0
# removed-by-oarepo     invenio-i18n>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-db[postgresql,mysql]>=1.1.0,<2.0.0
# removed-by-oarepo     # Invenio base bundle
# removed-by-oarepo     invenio-admin>=1.4.0,<1.5.0
# removed-by-oarepo     invenio-assets>=3.0.0,<4.0.0
# removed-by-oarepo     invenio-formatter>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-logging[sentry_sdk]>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-mail>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-rest>=1.3.0,<2.0.0
# removed-by-oarepo     invenio-theme>=3.0.0,<4.0.0
# removed-by-oarepo     # Invenio auth bundle
# removed-by-oarepo     invenio-access>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-accounts>=5.0.0,<6.0.0
# removed-by-oarepo     invenio-oauth2server>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-oauthclient>=4.0.0,<5.0.0
# removed-by-oarepo     invenio-userprofiles>=3.0.0,<4.0.0
# removed-by-oarepo     # Invenio metadata bundle
# removed-by-oarepo     invenio-indexer>=2.2.0,<3.0.0
# removed-by-oarepo     invenio-jsonschemas>=1.1.4,<2.0.0
# removed-by-oarepo     invenio-oaiserver>=2.2.0,<3.0.0
# removed-by-oarepo     invenio-pidstore>=1.3.0,<2.0.0
# removed-by-oarepo     invenio-records-rest>=2.2.0,<3.0.0
# removed-by-oarepo     invenio-records-ui>=1.2.0,<2.0.0
# removed-by-oarepo     invenio-records>=2.2.1,<3.0.0
# removed-by-oarepo     invenio-search-ui>=2.4.0,<2.9.0
# removed-by-oarepo     # Invenio files bundle
# removed-by-oarepo     invenio-files-rest>=2.0.0,<3.0.0
# removed-by-oarepo     invenio-previewer>=2.2.0,<3.0.0
# removed-by-oarepo     invenio-records-files>=1.2.1,<2.0.0
# removed-by-oarepo     # Invenio-App-RDM
# removed-by-oarepo     invenio-communities>=13.0.0,<14.0.0
# removed-by-oarepo     invenio-rdm-records>=10.0.0,<11.0.0
# removed-by-oarepo     CairoSVG>=2.5.2,<3.0.0
# removed-by-oarepo     invenio-banners>=3.0.0,<4.0.0
# removed-by-oarepo     invenio-pages>=4.0.0,<5.0.0
# removed-by-oarepo     # Pinned due to before_first_request deprecation https://flask.palletsprojects.com/en/2.2.x/api/#flask.Flask.before_first_request
# removed-by-oarepo     Flask>=2.2.0,<2.3.0

# removed-by-oarepo [options.extras_require]
# removed-by-oarepo tests =
# removed-by-oarepo     pytest-black-ng>=0.4.0
# removed-by-oarepo     pytest-invenio>=2.1.0,<3.0.0
# removed-by-oarepo     Sphinx>=4.5.0
# removed-by-oarepo elasticsearch7 =
# removed-by-oarepo     invenio-search[elasticsearch7]>=2.1.0,<3.0.0
# removed-by-oarepo opensearch1 =
# removed-by-oarepo     invenio-search[opensearch1]>=2.1.0,<3.0.0
# removed-by-oarepo opensearch2 =
# removed-by-oarepo     invenio-search[opensearch2]>=2.1.0,<3.0.0
# removed-by-oarepo s3 =
# removed-by-oarepo     invenio-s3~=1.0.5

[options.entry_points]
# removed-by-oarepo flask.commands =
# removed-by-oarepo    rdm = invenio_app_rdm.cli:rdm
# removed-by-oarepo invenio_base.blueprints =
# removed-by-oarepo    invenio_app_rdm_records = invenio_app_rdm.records_ui.views:create_blueprint
# removed-by-oarepo    invenio_app_rdm = invenio_app_rdm.theme.views:create_blueprint
# removed-by-oarepo    invenio_app_rdm_requests = invenio_app_rdm.requests_ui.views:create_ui_blueprint
# removed-by-oarepo    invenio_app_rdm_communities = invenio_app_rdm.communities_ui.views:create_ui_blueprint
# removed-by-oarepo     invenio_app_rdm_users = invenio_app_rdm.users_ui.views:create_ui_blueprint
# removed-by-oarepo     invenio_app_rdm_administration =  invenio_app_rdm.administration.views:create_ui_blueprint
# removed-by-oarepo     invenio_redirector = invenio_app_rdm.redirector.views:create_blueprint
# removed-by-oarepo invenio_config.module =
# removed-by-oarepo     invenio_app_rdm = invenio_app_rdm.config
# removed-by-oarepo invenio_i18n.translations =
# removed-by-oarepo     messages = invenio_app_rdm
invenio_assets.webpack =
    invenio_app_rdm_theme = invenio_app_rdm.theme.webpack:theme
# removed-by-oarepo invenio_previewer.previewers =
# removed-by-oarepo     iiif_simple = invenio_app_rdm.records_ui.previewer.iiif_simple
# removed-by-oarepo invenio_celery.tasks =
# removed-by-oarepo     invenio_app_rdm = invenio_app_rdm.tasks
# removed-by-oarepo invenio_administration.views =
# removed-by-oarepo     invenio_users_resources_users_list = invenio_app_rdm.administration.users:UsersListView
# removed-by-oarepo     invenio_users_resources_users_details = invenio_app_rdm.administration.users:UsersDetailView
# removed-by-oarepo     invenio_users_resources_domains_list = invenio_app_rdm.administration.domains:DomainsListView
# removed-by-oarepo     invenio_users_resources_domains_edit = invenio_app_rdm.administration.domains:DomainsEditView
# removed-by-oarepo     invenio_users_resources_domains_detail = invenio_app_rdm.administration.domains:DomainsDetailView
# removed-by-oarepo     invenio_users_resources_domains_create = invenio_app_rdm.administration.domains:DomainsCreateView
# removed-by-oarepo     invenio_requests_user_moderation_list = invenio_app_rdm.administration.user_moderation:UserModerationListView
# removed-by-oarepo     invenio_requests_user_moderation_detail = invenio_app_rdm.administration.user_moderation:UserModerationRequestDetailView
# removed-by-oarepo     invenio_app_rdm_records_list = invenio_app_rdm.administration.records:RecordAdminListView
# removed-by-oarepo     invenio_app_rdm_drafts_list = invenio_app_rdm.administration.records:DraftAdminListView
# removed-by-oarepo invenio_base.finalize_app =
# removed-by-oarepo     invenio_app_rdm = invenio_app_rdm.ext:finalize_app

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_app_rdm/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_app_rdm/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_app_rdm/translations/messages.pot
output-dir = invenio_app_rdm/translations/

[update_catalog]
input-file = invenio_app_rdm/translations/messages.pot
output-dir = invenio_app_rdm/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_app_rdm --cov-report=term-missing
testpaths = tests invenio_app_rdm
live_server_scope = module
